Fix ignored codegen tests (#281)
- named types with provider now work
- use AssetOrArchive in TypeMapper
- fix union fallback type regression
- eliminate redundant unions, e.g. String | String
- fix missing key when package mapping present
- fix type reference to a provider as resource
- update codegen/Main
- update various dependencies
- Justfile - update compile-all, add test-all
- use --server-false for provider packaging